# tests/flows/login_sucesso_flow.yaml
appId: com.vero_mobile
#env:
# Defina aqui qual usuário do .env será usado como padrão, caso não seja informado pelo fluxo pai
# CPF_TESTE: ${CPF_ADAPTER2}
# SENHA_TESTE: ${SENHA_ADAPTER2}
---
- launchApp:
    clearState: true
- tapOn:
    text: 'Insira o número do seu documento'
- inputText: ${CPF_ADAPTER_2}
- tapOn: Avançar, 
- assertVisible: 'Senha:'
- tapOn: 'Insira sua senha'
- inputText: ${SENHA_ADAPTER_2}
- tapOn: 'Entrar'
